@@ -41,6 +41,7 @@
   properties (java -Dchunky.home=DIR).
 * Omni-Directional Stereo projector added (thanks leMaik!)
 * Vertical droppers and dispensers are now rendered correctly.
+* Improved fog rendering through glass and other transparent materials.
 
 1.3.8 - 2016-04-03
 
